--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -1,10 +1,15 @@
-<html>
-  <head>
-    <title>{{ title }}</title>
-  </head>    
-  <body>
-    <div class="header">deep</div>
-    <h1>{{ content }}</h1>
-    <div class="footer">© deep, все права </div>
-  </body>
-</html> 
+{% extends "base.html" %}
+{% load static %}
+{% block content %}
+    <div class="row mt-1">
+        <div class="col-lg-2">
+            <!-- Пустой блок на Ваше усмотрение -->
+        </div>
+        <div class="col-lg-10">
+            <!-- Контент на странице -->
+            <div class="mt-5 pt-5 bg-black custom-shadow rounded">
+                <h1 class="mt-5 pt-1" style="color:White;">{{ content }}</h1>
+            </div>
+        </div>
+    </div>
+{% endblock %}
