add pages for categories and product

--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -13,3 +13,10 @@
         </div>
     </div>
 {% endblock %}
+{% block footer %}
+<footer class="py-4" bgcolor="black">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Curly Girl & Balloon 2024</p>
+    </div>
+</footer>
+{% endblock %}
