--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -16,7 +16,7 @@
 {% block footer %}
 <footer class="py-4" bgcolor="black">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Curly Girl & Balloon 2024</p>
+        <p class="m-0 text-center text-white">Copyright &copy; CurlyS & Balloon 2024</p>
     </div>
 </footer>
 {% endblock %}
