--- a/deep1/templates/includes/header.html
+++ b/deep1/templates/includes/header.html
@@ -23,7 +23,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="carts/cart.html">Корзина</a>
+                            <a class="nav-link  text-white" href="{% url 'user:users-cart' %}">Корзина</a>
                         </li>
                     </ul>
                 </div>
