--- a/deep1/carts/templates/carts/includes/included_cart.html
+++ b/deep1/carts/templates/carts/includes/included_cart.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col p-0"><strong>{{ cart.products_price }} руб</strong></div>
                 <div class="col p-0">
-                    <a href="{% url 'cart:cart-remove' 1 %}" class="remove-from-cart" data-cart-id="">
+                    <a href="{% url 'cart:cart-remove' cart.id %}" class="remove-from-cart" data-cart-id="">
                         <img class="mx-1" src="{% static 'deps/icons/trash3-fill.svg' %}"
                             alt="Catalog Icon" width="16" height="16">
                     </a>
@@ -39,7 +39,7 @@
 </div>
 <div class="card mb-3 shadow-lg">
     <div class="card-footer">
-        <p class="float-left">Итого <strong>{{ carts.total_quantity }}</strong> товар(а) на сумму</p>
+        <p class="float-left">Итого <strong>{{ carts.total_quantity }}</strong> товар(ов) на сумму</p>
         <h4 class="float-left"><strong> {{ carts.total_price }} руб</strong></h4>
     </div>
 </div>
