app goods, 2 images for product

--- a/deep1/templates/base.html
+++ b/deep1/templates/base.html
@@ -47,6 +47,7 @@
         </div>
         <!-- Контент -->
         <div class="container">
+            {% include "includes/notifications.html" %}
             {% block content %}{% endblock %}
         </div>
     </section>
