--- a/deep1/templates/includes/footer.html
+++ b/deep1/templates/includes/footer.html
@@ -1,5 +1,5 @@
     <footer class="py-4" bgcolor="black">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; CurlyS & Balloon 2024</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Curly & Balloon 2024</p>
         </div>
     </footer>
