--- a/deep1/goods/templates/goods/product.html
+++ b/deep1/goods/templates/goods/product.html
@@ -13,14 +13,12 @@
         <div class="container mt-5">
             <div class="card mb-4 custom-shadow">
                 <div class="row">
-                    <!-- Миниатюры -->
+                    <!-- Миниатюры изобрадение 1 -->
                     <div class="col-md-4">
                         <img src="{{ product.image.url }}"
                             class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
                     </div>
-                    <div class="col-md-4 ">
-                        <p class="product_id mt-3">id: {{ product.display_id }}</p>
-                    </div>
+                    
                     <!-- Увеличить изображение в модальном окне -->
                     <div class="modal fade" id="imageModal1" tabindex="-1"
                         aria-labelledby="imageModal1Label" aria-hidden="true">
@@ -38,6 +36,63 @@
                             </div>
                         </div>
                     </div>
+
+                    {% if product.image_2 %}
+                        <!-- Миниатюры изображение 2 -->
+                        <div class="col-md-4">
+                            <img src="{{ product.image_2.url }}"
+                                class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal2">
+                        </div>
+
+                        <!-- Увеличить изображение 2 в модальном окне -->
+                        <div class="modal fade" id="imageModal2" tabindex="-1"
+                            aria-labelledby="imageModal2Label" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="imageModal2Label">{{ product.name }}</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Закрыть"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img src="{{ product.image_2.url }}"
+                                            class="img-fluid" alt="Изображение 2">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+
+                    {% if product.image_3 %}
+                        <!-- Миниатюры изображение 3 -->
+                        <div class="col-md-4">
+                            <img src="{{ product.image_3.url }}"
+                                class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal3">
+                        </div>
+
+                        <!-- Увеличить изображение 3 в модальном окне -->
+                        <div class="modal fade" id="imageModal3" tabindex="-1"
+                            aria-labelledby="imageModal3Label" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="imageModal3Label">{{ product.name }}</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Закрыть"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img src="{{ product.image_3.url }}"
+                                            class="img-fluid" alt="Изображение 3">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+
+                    <div class="col-md-4 ">
+                        <p class="product_id mt-3">id: {{ product.display_id }}</p>
+                    </div>
+
                 </div>
                 <!-- Описание товара -->
                 <div class="card-body">
