доработка статических страниц

--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -12,14 +12,18 @@
         </div>
         <div class="col-lg-10">
             <!-- Контент на странице -->
-            <div class="mt-5 pt-5 bg-dark custom-shadow rounded">
-                <p class="mt-5 pt-1" style="color:White;">
+            <div class="mt-5 custom-shadow rounded bg-dark frame">
+                <p class="page-text">
                     Журнал "Бездна"- проект Ассоциации Спелеологов Урала.
                     Журнал посвящен исследованиям подземных глубин и людям, исследующим пещеры.
-                    <br>Здесь вы найдете последние новости спелеомира России об открытиях и находках в пещерах,
-                    истории исследований и интересные статистики анонсы соревнований и дистанции с них,
+                </p>
+                <p class="page-text">
+                    Здесь вы найдете последние новости спелеомира России об открытиях и находках в пещерах,
+                    истории исследований и интересные статистики, анонсы соревнований и дистанции с них,
                     а так же материалы о новейших технических решениях или экспериментах в пещерах.
-                    <br>Наша цель- рассказывать о спелеологии на Урале и в стране.
+                </p>
+                <p class="page-text">
+                    Наша цель - рассказывать о спелеологии на Урале и в стране.
                 </p>
             </div>
         </div>
