--- a/deep1/main/templates/main/payment_delivery.html
+++ b/deep1/main/templates/main/payment_delivery.html
@@ -12,9 +12,9 @@
         </div>
         <div class="col-lg-10">
             <!-- Контент на странице -->
-            <div class="mt-5 pt-5 bg-dark custom-shadow rounded">
-                <p class="mt-5 pt-1" style="color:White;">
-                    Здесь нужно написать информацию о доставке и оплате
+            <div class="mt-5 custom-shadow rounded bg-dark frame">
+                <p class="page-text">
+                    Добавить информацию по оплате и доставке
                 </p>
             </div>
         </div>
