--- a/deep1/goods/templates/goods/product.html
+++ b/deep1/goods/templates/goods/product.html
@@ -10,101 +10,104 @@
         <div class="col-lg-2">
             <!-- Пустой блок на Ваше усмотрение -->
         </div>
-        <div class="container mt-5">
-            <div class="card mb-4 custom-shadow">
-                <div class="row">
-                    <!-- Миниатюры изобрадение 1 -->
-                    <div class="col-md-4">
-                        <img src="{{ product.image.url }}"
-                            class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
-                    </div>
+        <div class="col-lg-10">
+            <!-- Контент на странице -->
+            <div class="row">
+            <div class="container mt-5">
+                <div class="card mb-4 custom-shadow">
+                    <div class="row">
+                        <!-- Миниатюры изобрадение 1 -->
+                        <div class="col-md-4">
+                            <img src="{{ product.image.url }}"
+                                class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
+                        </div>
                     
-                    <!-- Увеличить изображение в модальном окне -->
-                    <div class="modal fade" id="imageModal1" tabindex="-1"
-                        aria-labelledby="imageModal1Label" aria-hidden="true">
-                        <div class="modal-dialog modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="imageModal1Label">{{ product.name }}</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Закрыть"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <img src="{{ product.image.url }}"
-                                        class="img-fluid" alt="Изображение 1">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    {% if product.image_2 %}
-                        <!-- Миниатюры изображение 2 -->
-                        <div class="col-md-4">
-                            <img src="{{ product.image_2.url }}"
-                                class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal2">
-                        </div>
-
-                        <!-- Увеличить изображение 2 в модальном окне -->
-                        <div class="modal fade" id="imageModal2" tabindex="-1"
-                            aria-labelledby="imageModal2Label" aria-hidden="true">
+                        <!-- Увеличить изображение в модальном окне -->
+                        <div class="modal fade" id="imageModal1" tabindex="-1"
+                            aria-labelledby="imageModal1Label" aria-hidden="true">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="imageModal2Label">{{ product.name }}</h5>
+                                        <h5 class="modal-title" id="imageModal1Label">{{ product.name }}</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Закрыть"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <img src="{{ product.image_2.url }}"
-                                            class="img-fluid" alt="Изображение 2">
+                                        <img src="{{ product.image.url }}"
+                                            class="img-fluid" alt="Изображение 1">
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    {% endif %}
 
-                    {% if product.image_3 %}
-                        <!-- Миниатюры изображение 3 -->
-                        <div class="col-md-4">
-                            <img src="{{ product.image_3.url }}"
-                                class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal3">
-                        </div>
+                        {% if product.image_2 %}
+                            <!-- Миниатюры изображение 2 -->
+                            <div class="col-md-4">
+                                <img src="{{ product.image_2.url }}"
+                                    class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal2">
+                            </div>
 
-                        <!-- Увеличить изображение 3 в модальном окне -->
-                        <div class="modal fade" id="imageModal3" tabindex="-1"
-                            aria-labelledby="imageModal3Label" aria-hidden="true">
-                            <div class="modal-dialog modal-lg">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="imageModal3Label">{{ product.name }}</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Закрыть"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img src="{{ product.image_3.url }}"
-                                            class="img-fluid" alt="Изображение 3">
+                            <!-- Увеличить изображение 2 в модальном окне -->
+                            <div class="modal fade" id="imageModal2" tabindex="-1"
+                                aria-labelledby="imageModal2Label" aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="imageModal2Label">{{ product.name }}</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Закрыть"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="{{ product.image_2.url }}"
+                                                class="img-fluid" alt="Изображение 2">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    {% endif %}
+                        {% endif %}
 
-                    <div class="col-md-4 ">
-                        <p class="product_id mt-3">id: {{ product.display_id }}</p>
+                        {% if product.image_3 %}
+                            <!-- Миниатюры изображение 3 -->
+                            <div class="col-md-4">
+                                <img src="{{ product.image_3.url }}"
+                                    class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal3">
+                            </div>
+
+                            <!-- Увеличить изображение 3 в модальном окне -->
+                            <div class="modal fade" id="imageModal3" tabindex="-1"
+                                aria-labelledby="imageModal3Label" aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="imageModal3Label">{{ product.name }}</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Закрыть"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="{{ product.image_3.url }}"
+                                                class="img-fluid" alt="Изображение 3">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+
+                        <div class="col-md-4 ">
+                            <p class="product_id mt-3">id: {{ product.display_id }}</p>
+                        </div>
+
                     </div>
-
-                </div>
-                <!-- Описание товара -->
-                <div class="card-body">
-                    <p class="card-text">Цена: <strong>{{ product.sell_price }} руб</strong></p>
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <p class="card-text">{{ product.description }}</p>
-                    <a href="{% url 'cart:cart-add' %}" class="btn btn-dark add-to-cart"
-                    data-product-id="{{ product.id }}">
-                    {% csrf_token %}
-                    Добавить в корзину</a>
+                    <!-- Описание товара -->
+                    <div class="card-body">
+                        <p class="card-text">Цена: <strong>{{ product.sell_price }} руб</strong></p>
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <p class="card-text">{{ product.description }}</p>
+                        <a href="{% url 'cart:cart-add' %}" class="btn btn-dark add-to-cart"
+                        data-product-id="{{ product.id }}">
+                        {% csrf_token %}
+                        Добавить в корзину</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 {% endblock %}
