--- a/deep1/orders/templates/orders/create_order.html
+++ b/deep1/orders/templates/orders/create_order.html
@@ -3,47 +3,52 @@
 {% load carts_tags %}
 
 {% block content %}
-<!-- Контент на странице -->
-<div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-    <div class="container">
-        <h3 class="text-center mb-4">Выбранные товары</h3>
-        <div class="container" id="cart-items-container">
-            <!-- Разметка корзины -->
-                {% user_carts request as carts %}
-                {% include "carts/includes/included_cart.html" %}
-            <!-- Закончилась разметка корзины -->
-        </div>
+<div class="row mt-1">
+    <div class="col-lg-2">
+        <!-- Пустой блок на Ваше усмотрение -->
     </div>
-    <!-- Детали заказа -->
-    <div class="container">
-        <h3 class="text-center">Детали заказа</h3>
-        <div class="card mb-3">
-            <div class="card-body">
-                <form action="{% url 'orders:create-order' %}" method="post">
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="id_first_name" class="form-label">Имя*:</label>
-                            <input type="text" class="form-control" id="id_first_name"
-                                value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}"
-                                name="first_name" required>
-                        {% if form.first_name.errors %}
-                            <div class="alert alert-danger alert-dismissible fade show">
-                                {{form.first_name.errors}}
+    <div class="col-lg-10">
+        <!-- Контент на странице -->
+        <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
+            <div class="container">
+                <h3 class="text-center mb-4">Выбранные товары</h3>
+                <div class="container" id="cart-items-container">
+                    <!-- Разметка корзины -->
+                    {% user_carts request as carts %}
+                    {% include "carts/includes/included_cart.html" %}
+                    <!-- Закончилась разметка корзины -->
+                </div>
+            </div>
+            <!-- Детали заказа -->
+            <div class="container">
+                <h3 class="text-center">Детали заказа</h3>
+                <div class="card mb-3">
+                <div class="card-body">
+                    <form action="{% url 'orders:create-order' %}" method="post">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="id_first_name" class="form-label">Имя*:</label>
+                                <input type="text" class="form-control" id="id_first_name"
+                                    value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}"
+                                    name="first_name" required>
+                                {% if form.first_name.errors %}
+                                    <div class="alert alert-danger alert-dismissible fade show">
+                                        {{form.first_name.errors}}
+                                    </div>
+                                {% endif %}
                             </div>
-                        {% endif %}
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="id_last_name" class="form-label">Фамилия*:</label>
-                            <input type="text" class="form-control" id="id_last_name" name="last_name" 
-                                value="{% if form.last_name.value %}{{ form.last_name.value }}{% endif %}"
-                                required>
-                            {% if form.last_name.errors %}
-                            <div class="alert alert-danger alert-dismissible fade show">
-                                {{form.last_name.errors}}
+                            <div class="col-md-6 mb-3">
+                                <label for="id_last_name" class="form-label">Фамилия*:</label>
+                                <input type="text" class="form-control" id="id_last_name" name="last_name" 
+                                    value="{% if form.last_name.value %}{{ form.last_name.value }}{% endif %}"
+                                    required>
+                                {% if form.last_name.errors %}
+                                    <div class="alert alert-danger alert-dismissible fade show">
+                                        {{form.last_name.errors}}
+                                    </div>
+                                {% endif %}
                             </div>
-                        {% endif %}
-                        </div>
                         <div class="col-md-6 mb-3">
                             <label for="id_phone" class="form-label">Номер телефона*:</label>
                             <input type="text" class="form-control" id="id_phone" name="phone"
