app orders finished

--- a/deep1/orders/templates/orders/create_order.html
+++ b/deep1/orders/templates/orders/create_order.html
@@ -28,24 +28,24 @@
                         {% csrf_token %}
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <label for="id_first_name" class="form-label">Имя*:</label>
-                                <input type="text" class="form-control" id="id_first_name"
-                                    value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}"
-                                    name="first_name" required>
-                                {% if form.first_name.errors %}
+                                <label for="id_user_first_name" class="form-label">Имя*:</label>
+                                <input type="text" class="form-control" id="id_user_first_name"
+                                    value="{% if form.user_first_name.value %}{{ form.user_first_name.value }}{% endif %}"
+                                    name="user_first_name" required>
+                                {% if form.user_first_name.errors %}
                                     <div class="alert alert-danger alert-dismissible fade show">
-                                        {{form.first_name.errors}}
+                                        {{form.user_first_name.errors}}
                                     </div>
                                 {% endif %}
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label for="id_last_name" class="form-label">Фамилия*:</label>
-                                <input type="text" class="form-control" id="id_last_name" name="last_name" 
-                                    value="{% if form.last_name.value %}{{ form.last_name.value }}{% endif %}"
+                                <label for="id_user_last_name" class="form-label">Фамилия*:</label>
+                                <input type="text" class="form-control" id="id_user_last_name" name="user_last_name" 
+                                    value="{% if form.user_last_name.value %}{{ form.user_last_name.value }}{% endif %}"
                                     required>
-                                {% if form.last_name.errors %}
+                                {% if form.user_last_name.errors %}
                                     <div class="alert alert-danger alert-dismissible fade show">
-                                        {{form.last_name.errors}}
+                                        {{form.user_last_name.errors}}
                                     </div>
                                 {% endif %}
                             </div>
