information pages finished

--- a/deep1/main/templates/main/contacts.html
+++ b/deep1/main/templates/main/contacts.html
@@ -12,10 +12,56 @@
         </div>
         <div class="col-lg-10">
             <!-- Контент на странице -->
-            <div class="mt-5 custom-shadow rounded bg-dark frame">
+            <div class="mt-2 custom-shadow rounded bg-dark frame">
                 <p class="page-text">
-                    Добавить контакты
+                    Направить ваши материалы можно на электронную почту <span class="colortext">speleonews@yandex.ru</span> 
+                    или сообщением в группу журнала во ВКонтакте.<br><br>
+                    <span class="colortext">Требования к высылаемым материалам:<br></span> 
                 </p>
+                <ul class="page-text">
+                    <li>Тексты принимаются в формате DOC;</li>
+                    <li>Графики и схемы принимаются отдельными файлами в формате JPG высокого качества;</li>
+                    <li>Топосъемки пещер - в формате PDF, CDR с полными выходными данными;</li>
+                    <li>Фотографии - в формате JPG качеством не ниже 300 dpi с обязательным указанием авторства и описанием того, что изображено.</li>
+                </ul>
+                <p class="page-text">
+                    <span class="colortext">Журналы можно приобрести оффлайн у наших друзей:</span> 
+                </p>
+                <ul class="page-text">
+                    <li>
+                        <a class="dropdown-item  text-white" href="https://club.exje.ru" style="display:inline">
+                            <span class="colortext">«Посольство Уральских гор»</span> 
+                        </a>
+                        <p style="display:inline">, г. Уфа, ул. Мустая Карима, 44</p>
+                    </li>
+                    <li>
+                        Визит-центр «Национального парка Башкирия», село Нугуш, ул. Абубакирова, 1
+                    </li>
+                    <li>
+                        <a class="dropdown-item  text-white" href="https://vk.com/sgs.ekat" style="display:inline">
+                            <span class="colortext">Екатеринбургский клуб спелеологов</span>
+                        </a>
+                        <p style="display:inline">, г. Екатеринбург, ул. Вишневая, 46, офис 414</p>
+                    </li>
+                    <li>
+                        <a class="dropdown-item  text-white" href="http://sportx.ru/" style="display:inline">
+                            <span class="colortext">Магазин SportX</span>
+                        </a>
+                        <p style="display:inline">, г. Екатеринбург, ул. Советская, 16</p>
+                    </li>
+                    <li>
+                        <a class="dropdown-item  text-white" href="https://tur-eda.ru" style="display:inline">
+                            <span class="colortext">Магазин «Территория странствий»</span>
+                        </a>
+                        <p style="display:inline">, г. Москва, ул. Сайкина, 17</p>
+                    </li>
+                    <li>
+                        <a class="dropdown-item  text-white" href="https://www.krascp.ru/" style="display:inline">
+                            <span class="colortext">«Центр путешественников»</span>
+                        </a>
+                        <p style="display:inline">, г. Красноярск, ул. Карла Маркса, 49</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
