--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -13,13 +13,13 @@
         <div class="col-lg-10">
             <!-- Контент на странице -->
             <div class="mt-5 custom-shadow rounded bg-dark frame">
-                <p class="page-text">
-                    Журнал "Бездна"- проект Ассоциации Спелеологов Урала.
+                <p class="page-text"> 
+                    Журнал "Бездна" - проект Ассоциации Спелеологов Урала. Издается с 2006 года.
                     Журнал посвящен исследованиям подземных глубин и людям, исследующим пещеры.
                 </p>
                 <p class="page-text">
                     Здесь вы найдете последние новости спелеомира России об открытиях и находках в пещерах,
-                    истории исследований и интересные статистики, анонсы соревнований и дистанции с них,
+                    истории исследований и интересную статистику, анонсы соревнований и дистанции с них,
                     а так же материалы о новейших технических решениях или экспериментах в пещерах.
                 </p>
                 <p class="page-text">
