--- a/deep1/templates/includes/header.html
+++ b/deep1/templates/includes/header.html
@@ -19,6 +19,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item  text-white" href="{% url 'main:payment-delivery' %}">Доставка и оплата</a></li>
                                 <li><a class="dropdown-item  text-white" href="{% url 'main:contacts' %}">Контактная информация</a></li>
+                                <li><a class="dropdown-item  text-white" href="{% url 'main:work-group' %}">Над журналом работают</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
