add pdf to product model

--- a/deep1/main/templates/main/contacts.html
+++ b/deep1/main/templates/main/contacts.html
@@ -13,19 +13,10 @@
         <div class="col-lg-10">
             <!-- Контент на странице -->
             <div class="mt-2 custom-shadow rounded bg-dark frame">
+
                 <p class="page-text">
-                    Направить ваши материалы можно на электронную почту <span class="colortext">speleonews@yandex.ru</span> 
-                    или сообщением в группу журнала во ВКонтакте.<br><br>
-                    <span class="colortext">Требования к высылаемым материалам:<br></span> 
-                </p>
-                <ul class="page-text">
-                    <li>Тексты принимаются в формате DOC;</li>
-                    <li>Графики и схемы принимаются отдельными файлами в формате JPG высокого качества;</li>
-                    <li>Топосъемки пещер - в формате PDF, CDR с полными выходными данными;</li>
-                    <li>Фотографии - в формате JPG качеством не ниже 300 dpi с обязательным указанием авторства и описанием того, что изображено.</li>
-                </ul>
-                <p class="page-text">
-                    <span class="colortext">Журналы можно приобрести оффлайн у наших друзей:</span> 
+                    <span class="colortext" style="font-size: 25px; text-decoration: underline;">Покупателям</span><br>
+                    <br>Журналы можно приобрести оффлайн у наших друзей:
                 </p>
                 <ul class="page-text">
                     <li>
@@ -44,12 +35,6 @@
                         <p style="display:inline">, г. Екатеринбург, ул. Вишневая, 46, офис 414</p>
                     </li>
                     <li>
-                        <a class="dropdown-item  text-white" href="http://sportx.ru/" style="display:inline">
-                            <span class="colortext">Магазин SportX</span>
-                        </a>
-                        <p style="display:inline">, г. Екатеринбург, ул. Советская, 16</p>
-                    </li>
-                    <li>
                         <a class="dropdown-item  text-white" href="https://tur-eda.ru" style="display:inline">
                             <span class="colortext">Магазин «Территория странствий»</span>
                         </a>
@@ -62,6 +47,28 @@
                         <p style="display:inline">, г. Красноярск, ул. Карла Маркса, 49</p>
                     </li>
                 </ul>
+                <p class="page-text">
+                    <span class="colortext" style="font-size: 25px; text-decoration: underline;">
+                        Авторам и фотографам
+                    </span>
+                </p>
+                <p class="page-text" style="display:inline">
+                    Направить ваши вопросы и материалы можно на электронную почту <span class="colortext">speleonews@yandex.ru</span> 
+                    или сообщением в группу журнала во ВКонтакте:
+                    <a class="dropdown-item  text-white" href="https://vk.com/speleonews" style="display:inline">
+                        <span class="colortext">vk.com/speleonews</span>
+                    </a>
+                </p>
+                <p class="page-text">
+                    <br>Требования к высылаемым материалам:
+                </p>
+                <ul class="page-text">
+                    <li>Тексты принимаются в формате DOC;</li>
+                    <li>Графики и схемы принимаются отдельными файлами в формате JPG высокого качества;</li>
+                    <li>Топосъемки пещер - в формате PDF, CDR с полными выходными данными;</li>
+                    <li>Фотографии - в формате JPG качеством не ниже 300 dpi с обязательным указанием авторства и описанием того, что изображено.</li>
+                </ul>
+
             </div>
         </div>
     </div>
