--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -14,7 +14,7 @@
             <!-- Контент на странице -->
             <div class="mt-5 custom-shadow rounded bg-dark frame">
                 <p class="page-text"> 
-                    Журнал "Бездна" - проект Ассоциации Спелеологов Урала. Издается с 2006 года.
+                    Журнал "Бездна" - проект Ассоциации Спелеологов Урала (АСУ). Издается с 2006 года.
                     Журнал посвящен исследованиям подземных глубин и людям, исследующим пещеры.
                 </p>
                 <p class="page-text">
