finish order app

--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -13,16 +13,16 @@
         <div class="col-lg-10">
             <!-- Контент на странице -->
             <div class="mt-5 custom-shadow rounded bg-dark frame">
-                <p class="page-text"> 
-                    Журнал "Бездна" - проект Ассоциации Спелеологов Урала (АСУ). Издается с 2006 года.
+                <p class="text"> 
+                    Журнал <span class="colortext">"Бездна"</span> - проект Ассоциации Спелеологов Урала (АСУ). Издается с 2006 года.
                     Журнал посвящен исследованиям подземных глубин и людям, исследующим пещеры.
                 </p>
-                <p class="page-text">
+                <p class="text">
                     Здесь вы найдете последние новости спелеомира России об открытиях и находках в пещерах,
                     истории исследований и интересную статистику, анонсы соревнований и дистанции с них,
                     а так же материалы о новейших технических решениях или экспериментах в пещерах.
                 </p>
-                <p class="page-text">
+                <p class="text">
                     Наша цель - рассказывать о спелеологии на Урале и в стране.
                 </p>
             </div>
