--- a/deep1/main/templates/main/work_group.html
+++ b/deep1/main/templates/main/work_group.html
@@ -23,7 +23,7 @@
                 </p>
                 <p class="text">
                     <span class="colortext">Выпускающие редакторы:<br></span>
-                    Анна Логинова
+                    Анна Логинова<br>
                     Ольга Рейтер
                 </p>
                 <p class="text">
