--- a/deep1/main/templates/main/contacts.html
+++ b/deep1/main/templates/main/contacts.html
@@ -14,11 +14,11 @@
             <!-- Контент на странице -->
             <div class="mt-2 custom-shadow rounded bg-dark frame">
 
-                <p class="page-text">
-                    <span class="colortext" style="font-size: 25px; text-decoration: underline;">Покупателям</span><br>
+                <p class="text">
+                    <span class="colortext" style="font-size: 20px;">Покупателям</span><br>
                     <br>Журналы можно приобрести оффлайн у наших друзей:
                 </p>
-                <ul class="page-text">
+                <ul class="text">
                     <li>
                         <a class="dropdown-item  text-white" href="https://club.exje.ru" style="display:inline">
                             <span class="colortext">«Посольство Уральских гор»</span> 
@@ -47,22 +47,22 @@
                         <p style="display:inline">, г. Красноярск, ул. Карла Маркса, 49</p>
                     </li>
                 </ul>
-                <p class="page-text">
-                    <span class="colortext" style="font-size: 25px; text-decoration: underline;">
+                <p class="text">
+                    <span class="colortext" style="font-size: 20px;">
                         Авторам и фотографам
                     </span>
                 </p>
-                <p class="page-text" style="display:inline">
+                <p class="text" style="display:inline">
                     Направить ваши вопросы и материалы можно на электронную почту <span class="colortext">speleonews@yandex.ru</span> 
                     или сообщением в группу журнала во ВКонтакте:
                     <a class="dropdown-item  text-white" href="https://vk.com/speleonews" style="display:inline">
                         <span class="colortext">vk.com/speleonews</span>
                     </a>
                 </p>
-                <p class="page-text">
+                <p class="text">
                     <br>Требования к высылаемым материалам:
                 </p>
-                <ul class="page-text">
+                <ul class="text">
                     <li>Тексты принимаются в формате DOC;</li>
                     <li>Графики и схемы принимаются отдельными файлами в формате JPG высокого качества;</li>
                     <li>Топосъемки пещер - в формате PDF, CDR с полными выходными данными;</li>
