--- a/deep1/main/templates/main/payment_delivery.html
+++ b/deep1/main/templates/main/payment_delivery.html
@@ -13,25 +13,39 @@
         <div class="col-lg-10">
             <!-- Контент на странице -->
             <div class="mt-2 custom-shadow rounded bg-dark frame">
-                <p class="page-text">
-                    <span class="colortext">Оплата<br></span>
+                <p class="text">
+                    <span class="colortext" style="font-size: 20px;">
+                        Оплата<br>
+                    </span>
+                </p>
+                <p class="text" style="text-indent:20px display:inline">
                     Оплата производится картой на сайте. В общую сумму включается стоимость доставки, если выбран вариант "с доставкой".
                 </p>
-                <p class="page-text">
-                    <span class="colortext">Варианты доставки</span>
+                <p class="text">
+                    <span class="colortext" style="font-size: 20px;">
+                        Доставка
+                    </span>
                 </p>
-                <p class="page-text" style="text-indent:25px display:inline">
+                <p class="text" style="text-indent:25px display:inline">
                     1. Самовывоз<br>
-                    Самостоятельно забрать журналы можно
-                    <a class="dropdown-item  text-white" href="{% url 'main:contacts' %}" style="display:inline">
-                        <span class="colortext">здесь</span>
-                    </a>
+                    Пункты самовывоза:<br>
+                    - «Посольство Уральских гор», г. Уфа, ул. Мустая Карима, 44<br>
+                    - «Территория странствий», г. Москва, ул. Сайкина, 17<br>
+                    - «Центр путешественников», г. Красноярск, ул. Карла Маркса, 49<br>
+                    - Клуб СГС, Екатеринбург, ул. Вишневая, 46<br>
+                    - Магазин SportX, Екатеринбург, ул. Советская, 16<br>
+                    - Пермский спелеоклуб, Пермь, ул. Уральская, 114<br>
+                    - «Земля приключений», Оренбург, ул. Максима Горького, 22<br>
+                    - Магазин «Вертикаль», Симферополь, бульвар Ленина, 14/2<br>
+                    - Магазин «Геккон», Ялта, ул. Московская, 8а<br><br>
+                    При выборе опции "самовывоз" - журнал отправляется в выбранный пункт бесплатно.
+                    Когда журнал можно будет забрать - вам на почту придет письмо.
                 </p>
-                <p class="page-text">
+                <p class="text">
                     2. Яндекс доставка<br>
                     Стоимость доставки одного журнала - 100 руб, двух - 200 руб.
                 </p>
-                <p class="page-text">
+                <p class="text">
                     3. Почта России<br>
                     Стоимость доставки одного журнала - 250 руб, двух - 300 руб.
                 </p>
