--- a/deep1/templates/includes/header.html
+++ b/deep1/templates/includes/header.html
@@ -32,7 +32,9 @@
                 height="50" border="0"></a>
             <a class="navbar-brand" href="https://t.me/bezdnaASU"><img src="{% static 'deps/icons/telegram.png' %}" width="50" 
                 height="50" border="0"></a>
-            <img src="{% static 'deps/images/ASU.png' %}" style="width:200px;height:110px;">
+            <a class="navbar-brand" href="https://vk.com/speleoural">
+                <img src="{% static 'deps/images/ASU.png' %}" style="width:190px;height:100px;">
+            </a>
         </nav>
     </header>
    
