--- a/deep1/goods/templates/goods/product.html
+++ b/deep1/goods/templates/goods/product.html
@@ -16,29 +16,31 @@
             <div class="container mt-5">
                 <div class="card mb-4 custom-shadow">
                     <div class="row">
-                        <!-- Миниатюры изобрадение 1 -->
-                        <div class="col-md-4">
-                            <img src="{{ product.image.url }}"
-                                class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
-                        </div>
+                        {% if product.image %}
+                            <!-- Миниатюры изобрадение 1 -->
+                            <div class="col-md-4">
+                                <img src="{{ product.image.url }}"
+                                    class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
+                            </div>
                     
-                        <!-- Увеличить изображение в модальном окне -->
-                        <div class="modal fade" id="imageModal1" tabindex="-1"
-                            aria-labelledby="imageModal1Label" aria-hidden="true">
-                            <div class="modal-dialog modal-lg">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="imageModal1Label">{{ product.name }}</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Закрыть"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img src="{{ product.image.url }}"
-                                            class="img-fluid" alt="Изображение 1">
+                            <!-- Увеличить изображение в модальном окне -->
+                            <div class="modal fade" id="imageModal1" tabindex="-1"
+                                aria-labelledby="imageModal1Label" aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="imageModal1Label">{{ product.name }}</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Закрыть"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="{{ product.image.url }}"
+                                                class="img-fluid" alt="Изображение 1">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        {% endif %}
 
                         {% if product.image_2 %}
                             <!-- Миниатюры изображение 2 -->
