add custom 404 page, change footer

--- a/deep1/main/templates/main/payment_delivery.html
+++ b/deep1/main/templates/main/payment_delivery.html
@@ -19,7 +19,7 @@
                     </span>
                 </p>
                 <p class="text" style="text-indent:20px display:inline">
-                    Оплата производится картой на сайте. В общую сумму включается стоимость доставки, если выбран вариант "с доставкой".
+                    После оформления заказа вам на почту придет счет на оплату.
                 </p>
                 <p class="text">
                     <span class="colortext" style="font-size: 20px;">
@@ -28,7 +28,6 @@
                 </p>
                 <p class="text" style="text-indent:25px display:inline">
                     1. Самовывоз<br>
-                    Пункты самовывоза:<br>
                     - «Посольство Уральских гор», г. Уфа, ул. Мустая Карима, 44<br>
                     - «Территория странствий», г. Москва, ул. Сайкина, 17<br>
                     - «Центр путешественников», г. Красноярск, ул. Карла Маркса, 49<br>
@@ -40,6 +39,7 @@
                     - Магазин «Геккон», Ялта, ул. Московская, 8а<br><br>
                     При выборе опции "самовывоз" - журнал отправляется в выбранный пункт бесплатно.
                     Когда журнал можно будет забрать - вам на почту придет письмо.
+                    
                 </p>
                 <p class="text">
                     2. Яндекс доставка<br>
@@ -48,6 +48,9 @@
                 <p class="text">
                     3. Почта России<br>
                     Стоимость доставки одного журнала - 250 руб, двух - 300 руб.
+                </p>
+                <p class="text">
+                    4. При заказе pdf версии, журнал будет отправлен на почту после оплаты.
                 </p>
             </div>
         </div>
