--- a/deep1/templates/includes/footer.html
+++ b/deep1/templates/includes/footer.html
@@ -1,5 +1,9 @@
-    <footer class="py-4" bgcolor="black">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Curly & Balloon 2024</p>
-        </div>
+    <footer bgcolor="black">
+        <ul class="menu">
+            <li>©Бездна, 2024</li>
+            <li><a href="{% url 'main:privacy-policy' %}">Политика конфиденциальности</a></li>
+            <li>Фото: Гульназ Сакулина</li>
+        </ul>
+        
     </footer>
+    
