--- a/deep1/orders/templates/orders/create_order.html
+++ b/deep1/orders/templates/orders/create_order.html
@@ -140,7 +140,11 @@
                         
 
                     </div>
-                    <button type="submit" class="btn btn-dark">Оформить заказ</button>
+                    <input type='checkbox'
+                        onchange="document.getElementById('button1').disabled = !this.checked"
+                        checked/> Нажимая на кнопку я даю свое согласие на обработку персональных данный
+                        и соглашаюсь с условиями <a href="{% url 'main:privacy-policy' %}">политики конфиденциальности</a><br><br>
+                    <button id="button1" type="submit" class="btn btn-dark">Оформить заказ</button>
                 </form>
             </div>
         </div>
