--- a/deep1/goods/templates/goods/product.html
+++ b/deep1/goods/templates/goods/product.html
@@ -20,7 +20,7 @@
                             <!-- Миниатюры изобрадение 1 -->
                             <div class="col-md-4">
                                 <img src="{{ product.image.url }}"
-                                    class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
+                                    class="img-thumbnail; img-same-size" data-bs-toggle="modal" data-bs-target="#imageModal1">
                             </div>
                     
                             <!-- Увеличить изображение в модальном окне -->
@@ -46,7 +46,7 @@
                             <!-- Миниатюры изображение 2 -->
                             <div class="col-md-4">
                                 <img src="{{ product.image_2.url }}"
-                                    class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal2">
+                                    class="img-thumbnail; img-same-size" data-bs-toggle="modal" data-bs-target="#imageModal2">
                             </div>
 
                             <!-- Увеличить изображение 2 в модальном окне -->
@@ -72,7 +72,7 @@
                             <!-- Миниатюры изображение 3 -->
                             <div class="col-md-4">
                                 <img src="{{ product.image_3.url }}"
-                                    class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal3">
+                                    class="img-thumbnail; img-same-size" data-bs-toggle="modal" data-bs-target="#imageModal3">
                             </div>
 
                             <!-- Увеличить изображение 3 в модальном окне -->
