--- a/deep1/main/templates/main/payment_delivery.html
+++ b/deep1/main/templates/main/payment_delivery.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-10">
             <!-- Контент на странице -->
-            <div class="mt-2 custom-shadow rounded bg-dark frame">
+            <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
                 <p class="text">
                     <span class="colortext" style="font-size: 20px;">
                         Оплата<br>
