--- a/deep1/main/templates/main/work_group.html
+++ b/deep1/main/templates/main/work_group.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-5">
             <!-- Контент на странице -->
-            <div class="mt-2 custom-shadow rounded bg-dark frame">
+            <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
                 <p class="text">
                     <span class="colortext">Издатель:<br></span>
                     Артур Асылгужин
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="col-lg-5">
-            <div class="mt-2 custom-shadow rounded bg-dark frame">
+            <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
                 <p class="text">
                     <span class="colortext">Дизайнер обложки:<br></span>
                     Надежда Елисеева
